Adding user system

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "ejs": "*",
     "stylus": "*",
     "supervisord": "*",
-    "async": "*"
+    "async": "*",
+    "mysql": "*",
+    "knex": "*",
+    "bcrypt": "*"
   }
 }
